--- a/reflection/1.html
+++ b/reflection/1.html
@@ -30,7 +30,7 @@
 		</nav>
 
 		<h1>Analytics</h1>
-		<h1 class="book">Criteria 1</h1>
+		<h1 class="book">Learning Goal 1</h1>
 
 		<div style="text-align: justify;">
 
