--- a/reflection/2.html
+++ b/reflection/2.html
@@ -30,13 +30,18 @@
 		</nav>
 
 		<h1>Analytics</h1>
-		<h1 class="book">Criteria 2</h1>
+		<h1 class="book">Learning Goal 2</h1>
 
 		<div style="text-align: justify;">
 
-		<p></p>
+		<p><h3>Student Learning Goal 2: Students negotiate their own writing goals and audience expectations regarding conventions of genre, medium, and situation.</h3><br>
+		For this goal, I counted instances of adverbs and instances of phrases that are needlessly long/complex.</p>
+		<p>Like passive voice, adverbs aren't necessarily bad.  This graph shows the difference in use across the first two projects and the reflection essay.</p>
 
 		<canvas id="adverbChart" width="400" height="400"></canvas>
+
+		<p>In this case, I considered phrases that can be reduced to single words.  For example, "in order to" can be replaced with "to."  These are all instances where the phrasing can be more direct and less wordy.</p>
+
 		<canvas id="informalChart" width="400" height="400"></canvas>
 		<br><p style="float: left;"><a href="1.html"><< Back</a></p>
 		<p style="float: right;"><a href="3.html">Prev >></a></p><br>
