--- a/reflection/4.html
+++ b/reflection/4.html
@@ -30,15 +30,16 @@
 		</nav>
 
 		<h1>Analytics</h1>
-		<h1 class="book">Criteria 4</h1>
+		<h1 class="book">Learning Goal 4</h1>
 
 		<div style="text-align: justify;">
 
-		<p></p>
+		<p><h3>Student Learning Goal: Students revise their writing using responses from others, including peers, consultants, and teachers.</h3><br>
+		How much did the student change after receiving memos from peers?  This graph displays the net change in word count from first draft to final draft.  A positive number implies that the student added words.</p>
 
 		<canvas id="revisionsChart" width="400" height="400"></canvas>
-		<br><p style="float: left;"><a href="1.html"><< Back</a></p>
-		<p style="float: right;"><a href="3.html">Prev >></a></p><br>
+		<br><p style="float: left;"><a href="3.html"><< Back</a></p>
+		<p style="float: right;"><a href="5.html">Prev >></a></p><br>
 
 		<script type="text/javascript">
 		var revisionsData = {
