--- a/reflection/5.html
+++ b/reflection/5.html
@@ -30,16 +30,21 @@
 		</nav>
 
 		<h1>Analytics</h1>
-		<h1 class="book">Criteria 2</h1>
+		<h1 class="book">Learning Goal 5</h1>
 
 		<div style="text-align: justify;">
 
-		<p></p>
+		<p><h3>Student Learning Goal: Students generate and pursue lines of inquiry and search, collect, and select sources appropriate to their writing projects.</h3><br>
+		For each document, I counted the number of sources and how recently they were written by their authors.</p>
 
 		<canvas id="numSourceChart" width="400" height="400"></canvas>
+
+		<p>The recency of each document's sources is the ages averaged.  Student 1 used a source from the 1700s, so their result is a bit tall.  The sources for the literature reviews are recent, which is appropriate for the assignment.</p>
+
+
 		<canvas id="recencyChart" width="400" height="800"></canvas>
-		<br><p style="float: left;"><a href="1.html"><< Back</a></p>
-		<p style="float: right;"><a href="3.html">Prev >></a></p><br>
+		<br><p style="float: left;"><a href="4.html"><< Back</a></p>
+		<p style="float: right;"><a href="6.html">Prev >></a></p><br>
 
 		<script type="text/javascript">
 		var numSourceData = {
