--- a/reflection/6.html
+++ b/reflection/6.html
@@ -30,16 +30,18 @@
 		</nav>
 
 		<h1>Analytics</h1>
-		<h1 class="book">Criteria 2</h1>
+		<h1 class="book">Learning Goal 6</h1>
 
 		<div style="text-align: justify;">
 
-		<p></p>
+		<p><h3>Student Learning Goal 6: Students effectively use and appropriately cite sources in their writing.</h3><br>
+		I counted the number of citations in each document.  Easy.</p>
+
 
 		<canvas id="numSourceChart" width="400" height="400"></canvas>
 		<canvas id="citationChart" width="400" height="400"></canvas>
-		<br><p style="float: left;"><a href="1.html"><< Back</a></p>
-		<p style="float: right;"><a href="3.html">Prev >></a></p><br>
+		<br><p style="float: left;"><a href="5.html"><< Back</a></p>
+		<p style="float: right;"><a href="7.html">Prev >></a></p><br>
 
 		<script type="text/javascript">
 		var numSourceData = {
