--- a/reflection/8.html
+++ b/reflection/8.html
@@ -30,16 +30,20 @@
 		</nav>
 
 		<h1>Analytics</h1>
-		<h1 class="book">Criteria 2</h1>
+		<h1 class="book">Learning Goal 8</h1>
 
 		<div style="text-align: justify;">
 
-		<p></p>
+		<p><h3>Student Learning Goal 8: Students use multiple forms of evidence to support their claims, ideas, and arguments.</h3><br>
+		I counted instances of citations and direct quotations.</p>
 
 		<canvas id="citationChart" width="400" height="400"></canvas>
+
+		<p>Not many direct quotations.  Interesting.</p>
+
 		<canvas id="quotationChart" width="400" height="400"></canvas>
-		<br><p style="float: left;"><a href="1.html"><< Back</a></p>
-		<p style="float: right;"><a href="3.html">Prev >></a></p><br>
+		<br><p style="float: left;"><a href="7.html"><< Back</a></p>
+		<p style="float: right;"><a href="9.html">Prev >></a></p><br>
 
 		<script type="text/javascript">
 		var quotationData = {
