--- a/reflection/3.html
+++ b/reflection/3.html
@@ -30,100 +30,14 @@
 		</nav>
 
 		<h1>Analytics</h1>
-		<h1 class="book">Criteria 2</h1>
+		<h1 class="book">Learning Goal 3</h1>
 
 		<div style="text-align: justify;">
 
-		<p></p>
-
-		<canvas id="adverbChart" width="400" height="400"></canvas>
-		<canvas id="informalChart" width="400" height="400"></canvas>
-		<br><p style="float: left;"><a href="1.html"><< Back</a></p>
-		<p style="float: right;"><a href="3.html">Prev >></a></p><br>
-
-		<script type="text/javascript">
-		var adverbData = {
-			labels: ["Student 1", "Student 2", "Student 3", "Student 4", "Student 5", "Student 6", "Student 7", "Student 8", "Student 9", "Student 10", "Student 11", "Student 12", "Student 13", "Student 14", "Student 15", "Student 16"],
-			datasets: [{
-				label: 'Project 1',
-				backgroundColor: "rgba(152,162,174, 1)",
-				data: [22, 14, 26, 8, 15, 5, 23, 15, 11, 6, 8, 8, 10, 28, 10, 11]
-			}, {
-				label: 'Project 2',
-				backgroundColor: "rgba(40,133,141, 1)",
-				data: [19, 12, 35, 21, 27, 5, 19, 17, 0, 8, 20, 20, 11, 31, 16, 13]
-			}, {
-				label: 'Reflection',
-				backgroundColor: "rgba(36,64,86, 1)",
-				data: [11, 20, 32, 9, 13, 8, 2, 21, 0, 19, 10, 0, 8, 23, 17, 7]
-			}]
-		};
-
-		var informalData = {
-			labels: ["Student 1", "Student 2", "Student 3", "Student 4", "Student 5", "Student 6", "Student 7", "Student 8", "Student 9", "Student 10", "Student 11", "Student 12", "Student 13", "Student 14", "Student 15", "Student 16"],
-			datasets: [{
-				label: 'Project 1',
-				backgroundColor: "rgba(152,162,174, 1)",
-				data: [11, 6, 7, 19, 4, 2, 6, 3, 10, 14, 5, 7, 8, 19, 7, 5]
-			}, {
-				label: 'Project 2',
-				backgroundColor: "rgba(40,133,141, 1)",
-				data: [27, 18, 28, 38, 43, 28, 13, 23, 0, 25, 10, 24, 28, 29, 21, 21]
-			}, {
-				label: 'Reflection',
-				backgroundColor: "rgba(36,64,86, 1)",
-				data: [11,11,17,15,25,17,8,13,9,0,20,6,0,12,23,10,8]
-			}]
-		};
-
-		window.onload = function() {
-			var adverbCtx = $("#adverbChart").get(0).getContext("2d");
-			window.adverbBar = new Chart(adverbCtx, {
-            	type: 'bar',
-            	data: adverbData,
-            	options: {
-                	elements: {
-                    	rectangle: {
-                        	borderWidth: 1,
-                        	borderColor: 'rgb(15, 15, 20)',
-                        	borderSkipped: 'bottom'
-                    	}
-                	},
-                	responsive: true,
-                	legend: {
-                    	position: 'top',
-                	},
-                	title: {
-                    	display: true,
-                    	text: 'Adverbs'
-                	}
-            	}
-        	});
-
-        	var informalCtx = $("#informalChart").get(0).getContext("2d");
-        	window.informalBar= new Chart(informalCtx, {
-            	type: 'bar',
-            	data: informalData,
-            	options: {
-                	elements: {
-                    	rectangle: {
-                        	borderWidth: 1,
-                        	borderColor: 'rgb(15, 15, 20)',
-                        	borderSkipped: 'bottom'
-                    	}
-                	},
-                	responsive: true,
-                	legend: {
-                    	position: 'top',
-                	},
-                	title: {
-                    	display: true,
-                    	text: 'Instances of Informality'
-                	}
-            	}
-        	});
-		};	
-		</script>
+		<p><h3>Student Learning Goal 3: Students formulate and articulate a stance through and in their writing.</h3><br>
+		I argue that this learning goal does not fit into the projects done in the course.  Most technical writing requires an innate lack of opinion and bias, therefore having to "formulating and articulate" a stance seems counterproductive.  If the learning goal specified presenting information, counting <a href="6.html">citations</a>, <a href="8.html">quotations</a>, and paraphrasing would be apt.</p>
+		<br><p style="float: left;"><a href="2.html"><< Back</a></p>
+		<p style="float: right;"><a href="4.html">Prev >></a></p><br>
 		
 		</div>
 
