Final push...hopefully

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <div class="pageSimple">
 	<div class="content">
 
-		<h1 style="text-align: center;">Whatever</h1>
+		<h1 style="text-align: center;">Stuff I'm Okay With</h1>
 		<h1 class="book" style="text-align: right;">nathan hunt</h1>
 
-		<p>I'm not terribly proud of anything in this portfolio, but if you feel <a href="contents.html">compelled to enter...</a></p>
+		<p>These are the writings I've completed for ENGW3302.  I say it's all ok, but if you feel <a href="contents.html">compelled to enter...</a></p>
 		<br><br>
 	</div>
 </div>
