--- a/reflection/11.html
+++ b/reflection/11.html
@@ -56,6 +56,7 @@
 		</ul></p>
 
 		<br><p style="float: left;"><a href="10.html"><< Back</a></p>
+		<p style="float: right;"><a href="conclusion.html">Conclusion >></a></p>
 		<br>
 		
 		</div>
