--- a/reflection/conclusion.html
+++ b/reflection/conclusion.html
@@ -30,15 +30,20 @@
 		</nav>
 
 		<h1>Analytics</h1>
-		<h1 class="book">Learning Goal 9</h1>
+		<h1 class="book">Conclusion</h1>
 
 		<div style="text-align: justify;">
 
-		<p><h3>Student Learning Goal 9: Students practice critical reading strategies.</h3><br>
-		This one is hard to measure since it is holistic.  If the student carefully read the instructions and answered the prompt using correct information read from sources, then the student aptly fufilled this learning goal.
+		<p>Overall, these metrics are a bit surface-level.  They don't take into consideration the holistic value of each assignment.  Meaning, each piece of writing has a unique academic value, and the metrics do not make that terribly clear.</p>
+		<p>Also, the point of this wasn't to shame anyone.  What I thought was interesting was the fact that each student approached their writing differently, which can be seen in the variation in the quantities.  For instance, most people chose to forgoe direction quotations, yet there were a few that excelled in using them.
 		</p>
-		<br><p style="float: left;"><a href="8.html"><< Back</a></p>
-		<p style="float: right;"><a href="10.html">Prev >></a></p><br>
+		<p>This is designed to make the trends visible.  Habits like passive voice and lengthy sentences are easily forgotten about, I wanted to show how present they are in our writings.  Writing takes careful consideration, and I feel I didn't give as much as I could have.
+		</p>
+		<p>The big lesson here is diligence.  Pay close attention, be careful, and care about what you're writing for.
+		</p>
+
+		<br><p style="float: left;"><a href="/"><< Back to beginning</a></p>
+		<br>
 		
 		</div>
 
