--- a/reflection/index.html
+++ b/reflection/index.html
@@ -34,7 +34,7 @@
 
 		<div style="text-align: justify;">
 
-		<p>Standby...</p>
+		<p>After a bit of thinking and a lot of head-banging, I took a look into the trends across everyone's writings.  <a href="1.html">Take a look.</a></p>
 		
 		</div>
 
